kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exercise
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    name: exercise
